--- a/packages/graphql-schemas/tsconfig.json
+++ b/packages/graphql-schemas/tsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "target": "es2018",
     "module": "commonjs",
+    "lib": ["es2018", "esnext.asynciterable"],
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "declaration": true,
     "outDir": "./dist",
     "strict": true
