--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@esmap/types",
+  "name": "@esmapv3/types",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -7,6 +7,6 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "typescript": "^4.4.4"
+    "typescript": "^5.5.4"
   }
 }
