--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,21 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "lib": ["es2018", "esnext.asynciterable"],
+    "target": "ES2022",
+    "module": "NodeNext",
+    "lib": ["ES2022", "ESNext.AsyncIterable"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
     "esModuleInterop": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["../../*"]
+      "@esmapv3/*": ["packages/*/src"]
     },
+    "strict": true,
     "noImplicitAny": true,
-    "moduleResolution": "node"
+    "moduleResolution": "NodeNext"
   },
-  "include": ["src/**/*"]
+  "exclude": ["node_modules", "dist"]
 }
