--- a/esmap-ts/.vscode/settings.json
+++ b/esmap-ts/.vscode/settings.json
@@ -1,17 +1,22 @@
 {
-	"typescript.preferences.autoImportFileExcludePatterns": [
-		"@remix-run/server-runtime",
-		"@remix-run/router",
-		"express",
-		"@radix-ui/**",
-		"@react-email/**",
-		"react-router-dom",
-		"react-router",
-		"node:stream/consumers",
-		"node:test",
-		"node:console"
-	],
-	"workbench.editorAssociations": {
-		"*.db": "sqlite-viewer.view"
-	}
+  "typescript.preferences.autoImportFileExcludePatterns": [
+    "@remix-run/server-runtime",
+    "@remix-run/router",
+    "express",
+    "@radix-ui/**",
+    "@react-email/**",
+    "react-router-dom",
+    "react-router",
+    "node:stream/consumers",
+    "node:test",
+    "node:console"
+  ],
+  "workbench.editorAssociations": {
+    "*.db": "sqlite-viewer.view"
+  },
+  "search.exclude": {
+    "**/.yarn": true,
+    "**/.pnp.*": true
+  },
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
